--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
-title: "Blog Title"
-author: "Blog Author"
-description: "Made with <b style=\"color: #f45;\">&lt;3</b>"
+title: "Maria Anastasaki"
+author: "Maria Anastasaki"
+description: "Personal website of Maria Anastasaki"
 permalink: /:title/
 lang: "en"
 excerpt_separator: "\n\n\n"
@@ -19,8 +19,8 @@ navigation:                # accepts {file, title, url, icon, sidebaricon}
   - {file: "README.md"}
 
 external:                  # shows a footer with social links - for available icons see fontawesome.com/icons
-  - {title: Mail, icon: envelope, url: "mailto:niklasbuschmann@users.noreply.github.com"}
-  - {title: Github, icon: github, url: "https://github.com/niklasbuschmann/contrast"}
+  - {title: Mail, icon: envelope, url: "mailto:maria.anastasaki18@gmail.com"}
+  - {title: Github, icon: github, url: "https://github.com/manastasaki"}
   - {title: Subscribe, icon: rss, url: "/feed.xml"}
 
 comments:
